# sysmlv2-python-cookiecutter

./: CHANGELOG.md  README.md  cookiecutter.json  pyproject.toml
changelog.d/: new_fragment_custom.md.j2
docs/: advanced-setup.md  developing.md  getting-started.md
{{ cookiecutter.project_slug }}/: README.md  pyproject.toml
{{ cookiecutter.project_slug }}/docs/: developing.md  getting-started.md
{{ cookiecutter.project_slug }}/sysml/jupyter-sysml-kernel/sysml/: kernel.json
{{ cookiecutter.project_slug }}/sysml/models/: mymodel.sysml
{{ cookiecutter.project_slug }}/sysml/sysml.library/Kernel Libraries/Kernel Semantic Library/: Occurrences.kerml
